# vision-llm

./: .gitignore  README.md  modal_train.py  pyproject.toml
scripts/: demo.py
src/: dataset.py  diffusion.py  encoder.py  model.py  renderer.py  train.py  vectorizer.py
